@@ -6,6 +6,8 @@ Next
 - Drop six dependency (#9)
 - Add crs_wkt attribute (#10).
 - Add bounds attribute and ul() method (#11).
+- Add block_windows property (#7).
+- Enable windowed reads and writes (#6).
 
 0.2 (2013-11-24)
 ----------------
